--- a/index.html
+++ b/index.html
@@ -86,5 +86,17 @@
         <li>Test munu point</li>
       </ol>
     </nav>
+
+    <div class="box">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ea,
+      quibusdam sapiente vero pariatur velit expedita. Ab quaerat sapiente
+      repudiandae commodi enim debitis saepe veniam repellat iure, porro error
+      expedita.
+    </div>
+    <div class="box">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic at
+      dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
+      culpa et voluptatum, quas itaque, blanditiis alias reprehenderit eius?
+    </div>
   </body>
 </html>
