--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
     </div>
     <div>
       <h3 class="charter">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi
+        <a href=""> Lorem ipsum dolor sit amet consectetur</a>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi
+        </p>
       </h3>
     </div>
 
@@ -87,6 +90,32 @@
       </ol>
     </nav>
 
+    <div class="box">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ea,
+      quibusdam sapiente vero pariatur velit expedita. Ab quaerat sapiente
+      repudiandae commodi enim debitis saepe veniam repellat iure, porro error
+      expedita.
+    </div>
+    <div class="box">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic at
+      dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
+      culpa et voluptatum, quas itaque, blanditiis alias reprehenderit eius?
+    </div>
+    <div class="box">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ea,
+      quibusdam sapiente vero pariatur velit expedita. Ab quaerat sapiente
+      repudiandae commodi enim debitis saepe veniam repellat iure, porro error
+      expedita.
+    </div>
+    <img
+      src="/img/abstraktsiya_forma_ostrie_figurka_101902_1920x1080.jpg"
+      alt=""
+    />
+    <div class="box">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic at
+      dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
+      culpa et voluptatum, quas itaque, blanditiis alias reprehenderit eius?
+    </div>
     <div class="box">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ea,
       quibusdam sapiente vero pariatur velit expedita. Ab quaerat sapiente
