--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="/css2/style.css" />
   </head>
   <body>
+    <div class="example">
+      <h2>Content</h2>
+      <nav>
+        <ol>
+          <li id="begin">Test munu point</li>
+          <li>Test munu point</li>
+          <li>Test munu point</li>
+          <li>Test munu point</li>
+          <li>Test munu point</li>
+          <li>Test munu point</li>
+          <li>Test munu point</li>
+        </ol>
+      </nav>
+    </div>
     <div>
+      <img
+        src="/img/abstraktsiya_forma_ostrie_figurka_101902_1920x1080.jpg"
+        alt=""
+      />
       <h1>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique
         libero consequuntur molestiae cumque in fuga quibusdam adipisci totam
@@ -78,18 +96,6 @@
       </h3>
     </div>
 
-    <nav>
-      <ol>
-        <li id="begin">Test munu point</li>
-        <li>Test munu point</li>
-        <li>Test munu point</li>
-        <li>Test munu point</li>
-        <li>Test munu point</li>
-        <li>Test munu point</li>
-        <li>Test munu point</li>
-      </ol>
-    </nav>
-
     <div class="box">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ea,
       quibusdam sapiente vero pariatur velit expedita. Ab quaerat sapiente
@@ -107,10 +113,12 @@
       repudiandae commodi enim debitis saepe veniam repellat iure, porro error
       expedita.
     </div>
+
     <img
       src="/img/abstraktsiya_forma_ostrie_figurka_101902_1920x1080.jpg"
       alt=""
     />
+
     <div class="box">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic at
       dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
@@ -126,6 +134,25 @@
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic at
       dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
       culpa et voluptatum, quas itaque, blanditiis alias reprehenderit eius?
+    </div>
+
+    <div class="example1">
+      <div class="box">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic
+        at dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
+        culpa et voluptatum, quas itaque, blanditiis alias reprehenderit eius?
+      </div>
+      <div class="box">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima ea,
+        quibusdam sapiente vero pariatur velit expedita. Ab quaerat sapiente
+        repudiandae commodi enim debitis saepe veniam repellat iure, porro error
+        expedita.
+      </div>
+      <div class="box red">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam sit hic
+        at dolor voluptates ipsa mollitia quibusdam vitae illum veniam provident
+        culpa et voluptatum, quas itaque, blanditiis alias reprehenderit eius?
+      </div>
     </div>
   </body>
 </html>
