--- a/index.html
+++ b/index.html
@@ -56,6 +56,28 @@
         laudantium ex, fugit voluptatum.
       </p>
     </div>
+    <img
+      src="/img/abstraktsiya_forma_ostrie_figurka_101902_1920x1080.jpg"
+      alt=""
+    />
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt quisquam
+      quia provident. Cupiditate ratione esse repudiandae, sunt quis iste
+      numquam vero similique, nesciunt ipsum voluptatem sint minus magnam at id!
+      Libero officia dignissimos aspernatur quas impedit odio exercitationem
+      consequatur maiores error aperiam optio obcaecati cupiditate fugiat non
+      reprehenderit delectus dicta illo dolor, nam ratione in repellat similique
+      facere? Assumenda, nisi? Voluptatum aliquam optio rerum modi possimus
+      adipisci nostrum culpa dolore iure, numquam saepe, facere id sunt, tenetur
+      odio odit eum provident ut itaque dolorem nobis maxime ipsam a! Explicabo,
+      consequuntur? Culpa eum adipisci fugiat similique dolore aliquam maxime
+      aliquid recusandae iure nihil aspernatur error nam architecto doloribus,
+      expedita in enim. Libero laboriosam architecto vitae illum cumque
+      reiciendis veniam expedita doloremque. Animi dolore nihil voluptatem ipsum
+      magni ullam ipsa! Tenetur laboriosam praesentium corrupti molestias totam
+      dicta impedit facilis delectus placeat qui unde cupiditate cumque id,
+      officia veniam sapiente repudiandae. Nostrum, assumenda!
+    </p>
     <div>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat quas
